// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Quod non eaque sequi voluptas accusantium occaecati. Consequatur aut minima ut. Aut assumenda quo illo sed unde repellendus. Quam est est non odit architecto omnis ad quas.
 
Voluptas repudiandae animi nihil fugiat. Eveniet et aut quod repellat qui eos veniam quasi. Architecto et perferendis sed ut eius explicabo numquam voluptas eum. Recusandae corrupti nostrum ut quis ex quos aliquam. Voluptates mollitia est. Accusantium consequatur praesentium aperiam veniam nobis doloremque optio rerum.
 
Quam sit dolor quibusdam quo quia accusantium nemo aspernatur. At reiciendis nihil cupiditate deleniti tenetur qui necessitatibus rerum sint. Quis sit impedit in blanditiis ut. Quod doloribus perspiciatis est minus suscipit animi. Asperiores amet modi. Est esse ut et numquam recusandae mollitia.
 
Eos repudiandae a consequatur a. Eaque et inventore nostrum consequatur et enim consequatur illo voluptate. Qui ex rerum tenetur nam.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget editable header 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c6:first-child {
  margin-top: 0;
}

.c6:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c5:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c5 .c8 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c7 .c4 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Edit me
        <button
          className="c4 c5"
          data-test="widget-header-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c6"
    >
      Molestiae quos veritatis. Fugit aut perferendis aliquam itaque reprehenderit. Labore voluptatibus nobis qui doloribus sunt dolor voluptatem qui ratione. Dolorum inventore hic eos. Recusandae et necessitatibus nisi nostrum quas rerum harum. Qui iusto molestiae totam nulla et provident nesciunt voluptas.
 
Ut quod perferendis. Tempore ea omnis quia. Voluptatem dolor quasi ratione aliquid.
 
Nostrum consequatur adipisci cumque dicta laboriosam accusamus sit dicta facilis. Rerum sed qui aut saepe iste qui et. Eos recusandae laboriosam vel accusantium consequatur.
 
Aut esse accusamus. Libero velit consequatur fuga eveniet suscipit blanditiis at iste. Molestias sit eligendi voluptatum nobis non occaecati illo eum iste. Neque dolorem dolorem veniam vel dolor earum. Voluptate quod quam quaerat eum culpa architecto tenetur ipsam vitae. Vitae atque dolorum.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget initialEdit = true 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c8:first-child {
  margin-top: 0;
}

.c8:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.25em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: transparent;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
  position: absolute;
  right: 2.5em;
  top: 1.53125em;
}

.c7:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c7:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:active,
.c7.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c7[disabled] {
  pointer-events: none;
}

.c7[disabled]:after {
  display: block;
}

.c7:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c7:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c7 .c10 {
  font-size: 1.5em;
}

.c2 {
  height: 40px;
}

.c4 {
  max-width: 90%;
}

.c9 .c6 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        <div
          className="c4"
        >
          <input
            className="c5"
            data-test="widget-header-input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="Edit me"
          />
        </div>
        <button
          className="c6 c7"
          data-test="widget-header-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </button>
      </h1>
    </div>
    <p
      className="c8"
    >
      Soluta voluptas quia similique. Nam necessitatibus odit vel vitae tempore. Excepturi velit sapiente dicta sint quis facilis tempore. Consectetur aut eveniet pariatur hic voluptatem sapiente.
 
Voluptatem voluptate cum maxime suscipit quis et ipsam. Id consequatur mollitia facere. Et aliquam ut voluptas mollitia earum est alias officiis voluptatum. Expedita dolorem voluptas quod sit voluptate vero qui. Accusamus saepe ut accusantium quibusdam. Totam voluptatibus hic.
 
Esse qui ipsum esse est consectetur eaque libero. Voluptatum quia officiis est voluptas. Qui nulla architecto molestiae et distinctio rerum in. In eum delectus dolorum sequi autem saepe qui. Aliquid unde ducimus soluta omnis.
 
Dolorem assumenda molestias sunt autem. Eligendi rerum sed consequatur ut. Deleniti quis rerum eaque omnis et dicta.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.25em 0 0 1.25em;
  height: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="widget"
  >
    <div
      className="c2"
      data-test="widget-header"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Minima qui quas qui. Itaque aut nihil possimus odio at et nulla. Necessitatibus vel eum. Dignissimos in aut voluptates tempora explicabo ut perspiciatis veniam ducimus.
 
Necessitatibus perspiciatis et eligendi sequi assumenda aut. Harum ea non natus nisi. Nesciunt totam dignissimos dolores vitae ut dolorem amet velit deserunt. Assumenda sunt quam officiis eos et quos et. Aperiam sed sint facilis eos consequuntur. Repellendus aut voluptatem magnam ut modi dolorem quae saepe aut.
 
Dicta quae aliquam minima ea rerum. Exercitationem minima enim suscipit deserunt quos vel enim. Corrupti dolores perspiciatis harum consequatur aliquid nisi quis. Dolores neque itaque sed aut. Itaque eos amet fugiat recusandae ex itaque quas. Ea ad at omnis delectus.
 
Dignissimos et amet qui rerum enim quos natus. Quisquam facilis reiciendis atque eligendi delectus enim qui quia harum. Distinctio et iusto.
    </p>
  </div>
</div>
`;
